--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,12 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
+  flutter_slidable: ^2.0.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.3
+  flutter_heatmap_calendar: ^1.0.5
 
 dev_dependencies:
   flutter_test:
